# EmotiBit_Plugins

./: .gitignore  LICENSE  README.md  README_ard.md  README_of.md  README_py.md
ardExample_alg01/: alg01.cpp  ardExample_alg01.cpp  ardExample_alg01.h  ardExample_alg01.ino
cppExample_alg01/: driver.cpp
example_emotibitPacket/: CMakeLists.txt
example_emotibitPacket/src/: EmotiBitPacket.h
ofExample_alg01/src/: CMakeLists.txt
pyExample_EmotiBitPacket/: CMakeLists.txt  bindings_EmotiBitPacket.cpp  example.py
pyExample_alg01/: CMakeLists.txt  EmotiBit-pyenv-modern.yml  bindings_alg01.cpp  example.py  pyExample_alg01.py
py_envs/: README.md
src/: CMakeLists.txt  alg01.cpp  alg01.h  dll_config.h  driver.cpp  export_to_dll.h  export_to_pyd.h
